@@ -1,5 +1,8 @@
 1.1.0
 ==================
+- Added support for DateTimeOffset per COMP-56
+	NOTE: Not supported on Mono.
+
 - Applied patch to fix COMP-105
 	"DictionaryAdapter can't handle properties with the 'new' keyword"
 
